--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "banger",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Gulp-based build system, inject tasks into lifecyce, so it can be extended by user tasks.",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,12 @@
     "name": "Mark Small",
     "email": "marksmall@gmx.com"
   }],
+  "files": [
+    "dist"
+  ],
+  "directories": {
+    "lib": "./dist"
+  },
   "dependencies": {
     "gulp": "^3.9.1"
   },
