--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "lib": "./dist"
   },
   "dependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
@@ -60,14 +61,11 @@
     "gulp-changed": "^1.3.1",
     "gulp-debug": "^2.1.2",
     "gulp-help": "^1.6.1",
-    "gulp-jshint": "^2.0.1",
     "gulp-nice-package": "^1.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-size": "^2.1.0",
     "gulp-util": "^3.0.7",
-    "jshint": "^2.9.2",
-    "jshint-stylish": "^2.2.0",
     "karma": "^1.1.2",
     "path": "^0.12.7",
     "require-dir": "^0.3.0",
