--- a/package.json
+++ b/package.json
@@ -47,8 +47,31 @@
     "lib": "./dist"
   },
   "dependencies": {
+    "browser-sync": "^2.14.0",
+    "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1"
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-cache": "^0.4.5",
+    "gulp-changed": "^1.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssimport": "^3.1.0",
+    "gulp-csso": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
+    "gulp-html-replace": "^1.6.1",
+    "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.2",
+    "gulp-inline-source": "^2.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-sass": "^2.3.2",
+    "gulp-sass-lint": "^1.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^6.0.2",
+    "gulp-typescript": "^2.13.6",
+    "jspm": "^0.16.42",
+    "tslint": "^3.14.0",
+    "typescript": "^1.8.10"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
