--- a/package.json
+++ b/package.json
@@ -82,14 +82,26 @@
     "gulp-size": "^2.1.0",
     "gulp-util": "^3.0.7",
     "jspm": "^0.16.42",
+    "karma": "0.13.x",
+    "karma-chrome-launcher": "0.2.x",
+    "karma-firefox-launcher": "0.1.7",
+    "karma-ie-launcher": "0.2.0",
+    "karma-jspm": "2.1.x",
+    "karma-phantomjs-launcher": "1.0.x",
+    "karma-systemjs": "0.13.x",
     "path": "^0.12.7",
-    "require-dir": "^0.3.0",
+    "phantomjs-polyfill": "0.0.x",
+    "phantomjs-prebuilt": "^2.1.7",
+    "require-dir": "0.3.x",
+    "run-sequence": "1.1.x",
+    "systemjs-builder": "0.15.x",
     "tslint": "^3.14.0",
     "typescript": "^1.8.10"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
-    "karma": "^1.1.2",
+    "jasmine": "2.4.x",
+    "karma-jasmine": "0.3.x",
     "run-sequence": "^1.2.2"
   }
 }
