--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "event-stream": "^3.3.4",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.5",
     "gulp-changed": "^1.3.1",
-    "gulp-cli": "^1.2.2",
     "gulp-concat": "^2.6.0",
     "gulp-cssimport": "^3.1.0",
     "gulp-csso": "^2.0.0",
