Add task to release the project:
This task, or more correctly, collection of tasks:

* Update CHANGELOG
* Increment version
* Commit changes
* Create tag
* Generate GitHub release
* Publish to NPM repository

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "setup": "npm install --no-optional",
     "build": "gulp",
     "test": "gulp test",
-    "start": "gulp watch"
+    "start": "gulp watch",
+      "release": "gulp release"  
   },
   "engines": {
     "node": ">=4.5.0",
