--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "gulp",
     "test": "gulp test",
     "start": "gulp watch",
-      "release": "gulp release"  
+    "release": "gulp release"
   },
   "engines": {
     "node": ">=4.5.0",
@@ -82,6 +82,7 @@
     "gulp-tslint": "^6.0.2",
     "gulp-typescript": "^2.13.6",
     "gulp-util": "^3.0.7",
+    "http-proxy-middleware": "^0.17.1",
     "jspm": "^0.16.42",
     "karma": "0.13.x",
     "karma-chrome-launcher": "0.2.x",
