Add missing dependency:
When the build system is installed, an error about this dependency
ocurrs. Therefore adding as a project dependency so others don't
need to.

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "gulp-typescript": "^2.13.6",
     "gulp-util": "^3.0.7",
     "http-proxy-middleware": "^0.17.1",
+    "imagemin-gifsicle": "^5.1.0",
     "jspm": "^0.16.42",
     "karma": "0.13.x",
     "karma-chrome-launcher": "0.2.x",
